setup google font work sans

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
         
 </head>
 <body>
+    <header>
+        <h2>G3 Architects</h2>
+        <h4>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li> Contact</li>
+                <li>Login</li>
+            </ul>
+        </h4>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
