banner content  added

--- a/index.html
+++ b/index.html
@@ -9,15 +9,24 @@
 </head>
 <body>
     <header>
-        <h2>G3 Architects</h2>
-        <h4>
+        <nav>
+            <h2 >G3 Architects</h2>
+
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li> Contact</li>
-                <li>Login</li>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li> <a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
             </ul>
-        </h4>
+       
+        </nav>
+        <div>
+            <div class="banner-content">
+                <h2 class="banner title">  Brand New <br> Group Of Architects</h2>
+                <p class="banner description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt <br>laudantium tenetur odit repellendus cum. Sunt!</p>
+                <button class="btn-primary">Explore More</button></div>
+            <img src="images/banner.png" alt="">
+        </div>
 
     </header>
     <main>
