finished the header section with responsive for mobile and medium device

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
        
         </nav>
-        <div>
+        <div class="banner">
             <div class="banner-content">
                 <h2 class="banner title">  Brand New <br> Group Of Architects</h2>
                 <p class="banner description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt <br>laudantium tenetur odit repellendus cum. Sunt!</p>
