--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         
 </head>
 <body>
+
+    <!--header start-->
+
     <header>
         <nav>
             <h2 >G3 Architects</h2>
@@ -29,7 +32,27 @@
         </div>
 
     </header>
+    <!--header end-->
+
     <main>
+        <!--teams section start-->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+            </div>
+             <div class="teams-content">
+                <h2 class="teams-title"><span style="color: rgb(128, 119, 119); font-size: 45px; font-weight: 500px;">Quick List</span> <span style="font-size:45px ; font-weight: 700px;">of Our</span> <br> <span style="color: rgb(243, 129, 15); font-size: 45px; font-weight: 500px;">Features</span> </h2>
+                <br>
+                <p class="team-description">Lorem ipsum dolor, sit amet consectetur  <br>adipisicing elit.  In rerum quae expedita <br>quas minima laboriosam labore suscipit  <br>dicta praesentium enim.</p>
+                <br>
+                <button class="btn-primary">Explore More</button>
+
+             </div>
+        </section>
 
     </main>
     <footer>
