all section done

--- a/index.html
+++ b/index.html
@@ -53,10 +53,85 @@
 
              </div>
         </section>
+<!--featured section-->
+<section class="features">
+
+</section>
+<section class="facts">
+    <h3 style="font-size: 45px; color: darkblue;">
+      Some Facts
+    </h3>
+    <p>There are many varitions of <br>
+    passeges of lorem available , the but majourtiy <br>
+    have sufferd alteration.</p>
+    <div class="facts-card-container">
+        <div class="card">
+            <img src="images/icons/ribon.png" alt="">
+            <h2 class="card-starts">54</h2>
+            <p class="card-title">Awards Winnings</p>
+        </div>
+        <div class="card">
+            <img src="images/icons/projects.png" alt="">
+            <h2 class="card-starts">1458</h2>
+            <p class="card-title">Projects Finished</p>
+        </div>
+        <div class="card">
+            <img src="images/icons/customers.png" alt="">
+            <h2 class="card-starts">590</h2>
+            <p class="card-title">Clients Worked</p>
+        </div>
+        <div class="card">
+            <img src="images/icons/email.png" alt="">
+            <h2 class="card-starts">22578</h2>
+            <p class="card-title">Email Send</p>
+        </div>
+    </div>
+</section>
+
+<!--sponser section-->
+<section class="mid-content">
+    <div class="mid-container">
+        <h3>Features you will <br>love and enjoy</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Voluptas cumque nulla distinctio  <br>iste, repellendus minima!</p>
+        <br>
+        <h4>Dekstop and Mobile Version</h4>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing <br> elit. Voluptas ad iure repellendus maiores quaerat <br>sed quod ut a asperiores officia!</p>
+        <br> 
+        <h4>Drag and Drop Builder</h4>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing <br> elit. Voluptas ad iure repellendus maiores quaerat <br>sed quod ut a asperiores officia!</p>
+         <br>
+         <h4>Awesome Modern Design</h4>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing <br> elit. Voluptas ad iure repellendus maiores quaerat <br>sed quod ut a asperiores officia!</p>
+         <br>
+         <h4>Super Easy TO Edit</h4>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing <br> elit. Voluptas ad iure repellendus maiores quaerat <br>sed quod ut a asperiores officia!</p>
+    </div>
+    
+<div class="mid-content-img">
+    <img src="images/architect.png" alt="">
+<div class="ten-year-badg">
+    <h2 style="font-weight: 1000px; font-size: 40px;">10+ years</h2>
+    <p style="font-size: 25px; ">Experience</p>
+</div>
+</div>
+
+</section>
+
+<section class="sponsers">
+    <h3 style="font-size: 45px; color: darkblue;">Our Sponser</h3>
+    <P>Lorem ipsum dolor sit amet consectetur  <br>adipisicing elit. Tenetur, minima.</P>
+     <div class="sponser-img">
+        <img src="images/sponsors/google.png" alt="">
+        <img src="images/sponsors/spotify.png" alt="">
+        <img src="images/sponsors/figma.png" alt="">
+        <img src="images/sponsors/amazon.png" alt="">
+        <img src="images/sponsors/telerama.png" alt="">
+     </div>
+</section>
 
     </main>
-    <footer>
-
+    <footer >
+        <p class="fotter-text"> All rights recheved copyright @2023 start up landing page design</p>
     </footer>
     
 </body>
